# AagoGameEngine

./: .gitignore  CMakeLists.txt
src/: build_engine.sh  main.cpp  run.sh
src/UI/button/: button.cpp  button.h
src/UI/buttons/base_button/: base_button.cpp
src/UI/buttons/checkbox/: checkbox.cpp  checkbox.h
